[package]
name = "hue_exporter"
version = "0.2.0"
authors = ["Georg Gadinger <nilsding@nilsding.org>"]
edition = "2018"
homepage = "https://github.com/nilsding/hue_exporter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.6", default-features = false }
anyhow = "1.0"
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4.14"
prometheus = { version = "0.12", features = ["process"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
