[package]
authors = ["Georg Gadinger <nilsding@nilsding.org>"]
edition = "2018"
homepage = "https://github.com/nilsding/hue_exporter"
name = "hue_exporter"
rust-version = "1.59"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.2", default-features = false, features = ["macros"]}
anyhow = "1.0"
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
prometheus = {version = "0.13", features = ["process"]}
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
